crates/pina_macros/tests/ui/fail/account_tuple_struct.rs
use pina::*;

#[discriminator]
pub enum AccountKind {
	TupleAccount = 0,
}

#[account(discriminator = AccountKind, variant = TupleAccount)]
pub struct TupleAccount(u8);

fn main() {}
